# container-packaging-tools

./: .bumpversion.cfg  .gitignore  AGENTS.md  CLAUDE.md  EXAMPLES.md  MANIFEST.in  README.md  lefthook.yml  pyproject.toml  pyrightconfig.json  run
.github/actions/build-deb/: action.yml
.github/actions/check-versions/: action.yml
.github/actions/run-tests/: action.yml
.github/scripts/: build-deb-package.sh  check-release-exists.sh  generate-release-notes.sh  read-version.sh  run-backend-linting.sh  run-backend-tests.sh  run-backend-typecheck.sh
.github/workflows/: draft-release.yml  main.yml  pr.yml  release.yml  test.yml
debian/: changelog  container-packaging-tools.lintian-overrides  control  copyright  pydist-overrides  rules
docker/: Dockerfile.debtools  Dockerfile.devtools  Dockerfile.test  README.md  docker-compose.devtools.yml  docker-compose.test.yml  run-tests.sh
docs/: ARCHITECTURE.md  CONVERTER_ARCHITECTURE.md  CONVERTER_SPEC.md  DESIGN.md  PACKAGING_ARCHITECTURE.md  PACKAGING_SPEC.md  ROUTING.md  SECURITY.md  SPEC.md
mappings/casaos/: README.md  field_types.yaml
src/generate_container_packages/: __init__.py  __main__.py  builder.py  cli.py  labels.py  loader.py  middleware.py  naming.py  prestart.py  registry.py  renderer.py  routing.py  systemd_check.py  template_context.py  traefik.py  validator.py
src/generate_container_packages/converters/: __init__.py  exceptions.py
src/generate_container_packages/converters/casaos/: __init__.py  assets.py  batch.py  constants.py  models.py  output.py  parser.py  transformer.py  updater.py
src/generate_container_packages/converters/casaos/mappings/: README.md  categories.yaml  field_types.yaml  paths.yaml
src/generate_container_packages/templates/appstream/: metainfo.xml.j2
src/generate_container_packages/templates/debian/: control.j2  postinst.j2  postrm.j2  prerm.j2  rules.j2
src/generate_container_packages/templates/systemd/: path.j2  service.j2  watcher-service.j2
src/generate_container_packages/utils/: __init__.py  hashing.py
src/schemas/: __init__.py  config.py  metadata.py  store.py
templates/appstream/: metainfo.xml.j2
templates/debian/: changelog.j2  control.j2  copyright.j2  postinst.j2  postrm.j2  prerm.j2  rules.j2
templates/systemd/: service.j2
tests/: test_assets.py  test_builder.py  test_cli.py  test_default_data.py  test_file_watchers.py  test_integration.py  test_labels.py  test_loader.py  test_main.py  test_middleware.py  test_models.py  test_naming.py  test_package_install.py  test_prestart.py  test_registry.py  test_renderer.py  test_routing.py  test_routing_schema.py  test_systemd_check.py  test_template_context.py  test_templates_oidc.py  test_traefik_labels.py  test_traefik_schema.py  test_validator.py
tests/converters/casaos/: test_assets.py  test_batch.py  test_cli.py  test_mappings.py  test_models.py  test_output.py  test_parser.py  test_transformer.py  test_updater.py
tests/converters/casaos/fixtures/complex-app/: docker-compose.yml
tests/converters/casaos/fixtures/simple-app/: docker-compose.yml
tests/fixtures/: README.md
tests/fixtures/invalid/bad-app-id/: config.yml  metadata.yaml
tests/fixtures/invalid/bad-package-name/: metadata.yaml
tests/fixtures/invalid/invalid-email/: metadata.yaml
tests/fixtures/invalid/invalid-version/: metadata.yaml
tests/fixtures/invalid/missing-tag/: docker-compose.yml  metadata.yaml
tests/fixtures/invalid/stores/: bad-store-id.yaml  empty-origins.yaml
tests/fixtures/stores/invalid/: missing-origins.yaml
tests/fixtures/stores/valid/: full-store.yaml  minimal-store.yaml
tests/fixtures/valid/app-with-assets/: config.yml  docker-compose.yml  metadata.yaml
tests/fixtures/valid/app-with-assets/assets/templates/: index.html
tests/fixtures/valid/app-with-default-data/: config.yml  docker-compose.yml  metadata.yaml
tests/fixtures/valid/app-with-default-data/default-data/.signalk/: defaults.json  security.json
tests/fixtures/valid/app-with-default-data/default-data/scripts/: init.sh
tests/fixtures/valid/full-app/: config.yml  docker-compose.yml  metadata.yaml
tests/fixtures/valid/simple-app/: docker-compose.yml  metadata.yaml
tests/fixtures/valid/watcher-app/: config.yml  docker-compose.yml  metadata.yaml
